Spring Modules generate zips with module.xml
Version fixed and module-3.2 added

Removed spring-asm from spring 3.2

--- a/pom.xml
+++ b/pom.xml
@@ -460,7 +460,16 @@
                 <artifactId>jboss-as-connector</artifactId>
                 <version>${version.org.jboss.as7}</version>
             </dependency>
+            
+            <dependency>
+            	<groupId>cglib</groupId>
+            	<artifactId>cglib-nodep</artifactId>
+            	<version>2.2.2</version>
+            </dependency>
+
         </dependencies>
+        
+        
     </dependencyManagement>
 
     <profiles>
