--- a/subsystem-as7/modules/pom.xml
+++ b/subsystem-as7/modules/pom.xml
@@ -36,6 +36,7 @@
         <module>spring-2.5</module>
         <module>spring-3</module>
         <module>spring-3.1</module>
+        <module>spring-3.2</module>
     </modules>
 
 
