--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,12 @@
     </scm>
 
     <modules>
-        <module>deployers</module>
+        <module>interceptor</module>
         <module>subsystem-as7</module>
         <module>namespace</module>
-        <module>facade</module>
         <module>vfs</module>
         <module>weaving</module>
         <module>build</module>
-        <module>deployer-assembly</module>
     </modules>
 
     <properties>
@@ -48,17 +46,17 @@
         <version.org.jboss.test>1.1.9.GA</version.org.jboss.test>
         <version.junit>4.4</version.junit>
         <version.javassist>3.11.0.GA</version.javassist>
-        <version.javaee>3.0.0.GA</version.javaee>
+        <version.ejb>1.0.0.Beta1</version.ejb>
         <version.xerces>2.9.1</version.xerces>
         <version.aopalliance>1.0</version.aopalliance>
         <version.org.jboss.as7>7.1.0.Final</version.org.jboss.as7>
-        <version.spring>2.5.6.SEC02</version.spring>
+        <version.spring>3.0.0.RELEASE</version.spring>
         <version.org.jboss.jandex>1.0.0.Beta7</version.org.jboss.jandex>
         <version.aspectj>1.6.6</version.aspectj>
-        <version.jboss.msc>1.0.1.GA</version.jboss.msc>
-        <version.javax.resource>1.0.0.Final</version.javax.resource>
+        <version.jboss.msc>1.0.3.GA</version.jboss.msc>
+        <version.javax.resource>1.0.1.Final</version.javax.resource>
         <version.ironjacamar.api>1.0.4.Final</version.ironjacamar.api>
-        <version.jboss.modules>1.0.2.GA</version.jboss.modules>
+        <version.jboss.modules>1.1.3.GA</version.jboss.modules>
     </properties>
 
     <build>
@@ -120,17 +118,7 @@
 
             <dependency>
                 <groupId>org.jboss.snowdrop</groupId>
-                <artifactId>snowdrop-deployers</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.snowdrop</groupId>
-                <artifactId>snowdrop-deployers-vfs2</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.snowdrop</groupId>
-                <artifactId>snowdrop-deployers-vfs3</artifactId>
+                <artifactId>snowdrop-interceptor</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -154,139 +142,6 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.jboss.kernel</groupId>
-                <artifactId>jboss-dependency</artifactId>
-                <version>${version.jboss.kernel}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.kernel</groupId>
-                <artifactId>jboss-kernel</artifactId>
-                <version>${version.jboss.kernel}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.kernel</groupId>
-                <artifactId>jboss-aop-mc-int</artifactId>
-                <version>${version.jboss.kernel}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.kernel</groupId>
-                <artifactId>jboss-spring-int</artifactId>
-                <version>${version.jboss.kernel}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.kernel</groupId>
-                <artifactId>jboss-guice-int</artifactId>
-                <version>${version.jboss.kernel}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.deployers</groupId>
-                <artifactId>jboss-deployers-client</artifactId>
-                <version>${version.jboss.deployers}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.deployers</groupId>
-                <artifactId>jboss-deployers-client-spi</artifactId>
-                <version>${version.jboss.deployers}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.deployers</groupId>
-                <artifactId>jboss-deployers-core-spi</artifactId>
-                <version>${version.jboss.deployers}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.deployers</groupId>
-                <artifactId>jboss-deployers-impl</artifactId>
-                <version>${version.jboss.deployers}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.jboss</groupId>
-                        <artifactId>javassist</artifactId>
-                    </exclusion>
-                </exclusions>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.deployers</groupId>
-                <artifactId>jboss-deployers-spi</artifactId>
-                <version>${version.jboss.deployers}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.deployers</groupId>
-                <artifactId>jboss-deployers-structure-spi</artifactId>
-                <version>${version.jboss.deployers}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.deployers</groupId>
-                <artifactId>jboss-deployers-vfs</artifactId>
-                <version>${version.jboss.deployers}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.deployers</groupId>
-                <artifactId>jboss-deployers-vfs</artifactId>
-                <version>${version.jboss.deployers}</version>
-                <type>test-jar</type>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.deployers</groupId>
-                <artifactId>jboss-deployers-vfs-spi</artifactId>
-                <version>${version.jboss.deployers}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.cl</groupId>
-                <artifactId>jboss-classloader</artifactId>
-                <version>${version.jboss.classloader}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.cl</groupId>
-                <artifactId>jboss-classloading</artifactId>
-                <version>${version.jboss.classloader}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.cl</groupId>
-                <artifactId>jboss-classloading-vfs</artifactId>
-                <version>${version.jboss.classloader}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.man</groupId>
-                <artifactId>jboss-managed</artifactId>
-                <version>${version.jboss.man}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.man</groupId>
-                <artifactId>jboss-metatype</artifactId>
-                <version>${version.jboss.man}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss</groupId>
-                <artifactId>jboss-mdr</artifactId>
-                <version>${version.jboss.mdr}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss</groupId>
-                <artifactId>jboss-common-core</artifactId>
-                <version>${version.jboss.common.core}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
                 <groupId>org.jboss.logging</groupId>
                 <artifactId>jboss-logging-spi</artifactId>
                 <version>${version.jboss.common.logging.spi}</version>
@@ -296,18 +151,6 @@
                 <groupId>org.jboss.logging</groupId>
                 <artifactId>jboss-logging-log4j</artifactId>
                 <version>${version.jboss.common.logging.log4j}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss</groupId>
-                <artifactId>jbossxb</artifactId>
-                <version>${version.jbossxb}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss</groupId>
-                <artifactId>jboss-vfs</artifactId>
-                <version>${version.jboss.vfs}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -323,15 +166,9 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>org.jboss</groupId>
-                <artifactId>javassist</artifactId>
-                <version>${version.javassist}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.javaee</groupId>
-                <artifactId>jboss-ejb-api</artifactId>
-                <version>${version.javaee}</version>
+                <groupId>org.jboss.spec.javax.ejb</groupId>
+                <artifactId>jboss-ejb-api_3.0_spec</artifactId>
+                <version>${version.ejb}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -394,12 +231,6 @@
                 <optional>true</optional>
             </dependency>
             <dependency>
-                <groupId>org.jboss.cache</groupId>
-                <artifactId>jbosscache-pojo</artifactId>
-                <version>${version.jboss.pojocache}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>servlet-api</artifactId>
                 <scope>provided</scope>
@@ -407,22 +238,15 @@
             </dependency>
             <!-- test dependencies -->
             <dependency>
-                <groupId>org.jboss.test</groupId>
-                <artifactId>jboss-test</artifactId>
-                <version>${version.org.jboss.test}</version>
-                <scope>test</scope>
+            	<groupId>org.jboss</groupId>
+            	<artifactId>jboss-vfs</artifactId>
+            	<version>${version.jboss.vfs}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${version.junit}</version>
                 <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.snowdrop</groupId>
-                <artifactId>snowdrop-deployers-core</artifactId>
-                <version>${project.version}</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.aspectj</groupId>
@@ -435,25 +259,9 @@
                 <version>${version.aspectj}</version>
             </dependency>
             <dependency>
-                <groupId>org.jboss.msc</groupId>
-                <artifactId>jboss-msc</artifactId>
-                <version>${version.jboss.msc}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
                 <groupId>org.jboss.spec.javax.resource</groupId>
-                <artifactId>jboss-connector-api_1.5_spec</artifactId>
+                <artifactId>jboss-connector-api_1.6_spec</artifactId>
                 <version>${version.javax.resource}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.ironjacamar</groupId>
-                <artifactId>ironjacamar-core-api</artifactId>
-                <version>${version.ironjacamar.api}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.modules</groupId>
-                <artifactId>jboss-modules</artifactId>
-                <version>${version.jboss.modules}</version>
             </dependency>
             <dependency>
                 <groupId>org.jboss.as</groupId>
