--- a/subsystem-as7/subsystem-as7/pom.xml
+++ b/subsystem-as7/subsystem-as7/pom.xml
@@ -57,13 +57,7 @@
 
         <dependency>
             <groupId>org.jboss.snowdrop</groupId>
-            <artifactId>snowdrop-deployers-core</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jboss.snowdrop</groupId>
-            <artifactId>snowdrop-deployers</artifactId>
+            <artifactId>snowdrop-interceptor</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
