--- a/subsystem-as7/subsystem-as7/pom.xml
+++ b/subsystem-as7/subsystem-as7/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>snowdrop-deployers</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.jboss.javaee</groupId>
+            <artifactId>jboss-servlet-api</artifactId>
+            <version>2.5.0.GA</version>
+        </dependency>
     </dependencies>
 
     <build>
