--- a/namespace/pom.xml
+++ b/namespace/pom.xml
@@ -23,7 +23,7 @@
 
         <dependency>
             <groupId>org.jboss.snowdrop</groupId>
-            <artifactId>snowdrop-deployers-core</artifactId>
+            <artifactId>snowdrop-interceptor</artifactId>
         </dependency>
 
         <dependency>
