--- a/deployer-assembly/pom.xml
+++ b/deployer-assembly/pom.xml
@@ -117,6 +117,10 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.jboss.snowdrop</groupId>
+            <artifactId>snowdrop-interceptor</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
