--- a/deployers/deployers-core/pom.xml
+++ b/deployers/deployers-core/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <groupId>org.jboss.snowdrop</groupId>
         <artifactId>snowdrop-deployers-parent</artifactId>
-        <version>2.0.6.Final-SNAPSHOT</version>
+        <version>2.1.0.Final</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>snowdrop-deployers-core</artifactId>
