--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <groupId>org.jboss.snowdrop</groupId>
     <artifactId>snowdrop-parent</artifactId>
-    <version>2.0.6.Final-SNAPSHOT</version>
+    <version>2.1.0.Final</version>
     <packaging>pom</packaging>
     <name>Snowdrop Parent POM</name>
     <url>http://jboss.org/snowdrop</url>
