--- a/subsystem-as7/modules/spring-2.5/pom.xml
+++ b/subsystem-as7/modules/spring-2.5/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <artifactId>modules</artifactId>
         <groupId>org.jboss.snowdrop</groupId>
-        <version>2.0.6.Final-SNAPSHOT</version>
+        <version>2.1.0.Final</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
