--- a/vfs/pom.xml
+++ b/vfs/pom.xml
@@ -2,7 +2,8 @@
     <parent>
         <groupId>org.jboss.snowdrop</groupId>
         <artifactId>snowdrop-parent</artifactId>
-        <version>2.0.6.Final-SNAPSHOT</version>
+<!--         <version>2.1.0.Final</version> -->
+    	<version>2.1.0.Final</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>snowdrop-vfs</artifactId>
