--- a/vfs/pom.xml
+++ b/vfs/pom.xml
@@ -50,6 +50,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.modules</groupId>
+            <artifactId>jboss-modules</artifactId>
+            <version>1.1.3.GA</version>
+        </dependency>
     </dependencies>
 
     <build>
